--- a/BMPL/BMPL.csproj
+++ b/BMPL/BMPL.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BMDaGear.cs" />
     <Compile Include="BMUiCache.cs" />
     <Compile Include="BMUiConst.cs" />
+    <Compile Include="BMUiCustomControls.cs" />
     <Compile Include="BMUiDictionary.cs" />
     <Compile Include="BMUiGear.cs" />
     <Compile Include="BM_dictionary.cs">
@@ -172,6 +173,8 @@
     <Content Include="data\bm_init_settings.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\view.png" />
+    <None Include="Resources\gear.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.106.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.106.0\build\net451\System.Data.SQLite.Core.targets')" />
