--- a/BMPL/BMPL.csproj
+++ b/BMPL/BMPL.csproj
@@ -73,6 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BMGridGear.cs" />
+    <Compile Include="BMLoggingGear.cs" />
+    <Compile Include="BMQueueGear.cs" />
     <Compile Include="BMSrvGear.cs" />
     <Compile Include="BMDaGear.cs" />
     <Compile Include="BMIOGear.cs" />
@@ -200,6 +202,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="extension\" />
+    <Folder Include="logs\" />
     <Folder Include="system\" />
     <Folder Include="update\" />
   </ItemGroup>
